--- a/less/index.less
+++ b/less/index.less
@@ -57,3 +57,71 @@ html, body {
     height: 100%;
 }
 
+
+
+.deskTop () {
+	width: 95%;
+	height: 100%;
+	margin: 0 auto;
+}
+.decoration () {
+	text-decoration: none;
+	color: gray;
+}
+
+.navStyle () {
+	display: flex;
+	justify-content: space-around;
+	align-items: center
+}
+
+.column () {
+	display: flex;
+	flex-direction: column;
+}
+
+.table () {
+	border: 1px solid#dddddd;
+  	text-align: left;
+	padding: 8px;
+}
+
+body {
+	.deskTop;
+}
+
+nav {
+	.navStyle;
+	
+	a {
+		.decoration;
+	}
+
+}
+
+.aboutMe {
+	display: flex;
+	width: 100%;
+	margin: 0 auto;
+}
+
+.intro {
+	display: flex;
+	flex-direction: column;
+}
+
+table {
+	font-family: arial, sans-serif;
+  	border-collapse: collapse;
+	width: 100%;
+
+	th {
+		.table;
+	}
+
+	td {
+		.table;
+		background: #dddddd;
+	}
+	  
+}
