--- a/less/index.less
+++ b/less/index.less
@@ -108,6 +108,8 @@ nav {
 .intro {
 	display: flex;
 	flex-direction: column;
+	width: 50%;
+	font-size: 1.5rem;
 }
 
 table {
@@ -124,4 +126,8 @@ table {
 		background: #dddddd;
 	}
 	  
+}
+
+.show {
+	background: #ddd;
 }
