--- a/less/index.less
+++ b/less/index.less
@@ -57,7 +57,7 @@ html, body {
     height: 100%;
 }
 
-
+@gap: 30px auto;
 
 .deskTop () {
 	width: 95%;
@@ -92,6 +92,7 @@ body {
 
 nav {
 	.navStyle;
+	margin:	@gap;
 	
 	a {
 		.decoration;
